--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
