--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.7",
+    "d3": "^7.9.0",
     "pinia": "^2.2.4",
     "universal-cookie": "^7.2.0",
     "vue": "^3.4.29",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
